documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef int BOOL;
typedef void* HCARD;

/**
*
*  CM1553-1 Driver functions.
*
**/

C11W32API INT __stdcall C11_BCBranchEnd(HCARD handleval);

C11W32API USHORT __stdcall C11_BCCallFrame(INT index,HCARD handleval);

C11W32API INT __stdcall C11_BCCheckMsg(INT index,HCARD handleval);

C11W32API INT __stdcall C11_BCConfig(ULONG configflags,HCARD handleval);

C11W32API INT __stdcall C11_BCConfigEx(ULONG configflags,INT cmdcountval,INT cyccountval,HCARD handleval);

C11W32API INT __stdcall C11_BCDoAgain(INT index,HCARD handleval);

C11W32API INT __stdcall C11_BCDoGap(INT gapval,HCARD handleval);

C11W32API INT __stdcall C11_BCDoGoto(INT destindex,HCARD handleval);

C11W32API INT __stdcall C11_BCDoHalt(HCARD handleval);

C11W32API INT __stdcall C11_BCDoInt(HCARD handleval);

C11W32API INT __stdcall C11_BCDoMsg(BOOL busab,USHORT cwdval,LPUSHORT datavals,HCARD handleval);

C11W32API INT __stdcall C11_BCDoResv(HCARD handleval);

C11W32API INT __stdcall C11_BCDoRTRT(BOOL busab,USHORT cwd1val,USHORT cwd2val,HCARD handleval);

C11W32API INT __stdcall C11_BCDoSelfTest(HCARD handleval);

C11W32API INT __stdcall C11_BCFrameEnd(HCARD handleval);

C11W32API INT __stdcall C11_BCFrameStart(INT timeval,HCARD handleval);

C11W32API INT __stdcall C11_BCMsgBranch(INT index,INT destindex,INT condition,HCARD handleval);

C11W32API INT __stdcall C11_BCMsgRetry(INT index,INT retries,INT condition,HCARD handleval);

C11W32API USHORT __stdcall C11_BCRdData(INT index,LPUSHORT data,USHORT count,HCARD handleval);

C11W32API USHORT __stdcall C11_BCRdSWD1(INT index,HCARD handleval);

C11W32API USHORT __stdcall C11_BCRdSWD2(INT index,HCARD handleval);

C11W32API USHORT __stdcall C11_BCWrData(INT index,LPUSHORT data,USHORT count,HCARD handleval);

C11W32API VOID __stdcall C11_CloseCard(HCARD handleval);

C11W32API USHORT __stdcall C11_GetBitFld(USHORT oldvalue,INT startbit,INT endbit);

C11W32API INT __stdcall C11_INTInstall(LPVOID hEvent,HCARD handleval);

C11W32API INT __stdcall C11_INTRd(INT index,LPUSHORT type,LPUSHORT event,HCARD handleval);

C11W32API INT __stdcall C11_INTUninstall(LPVOID hEvent,HCARD handleval);

C11W32API VOID __stdcall C11_INTUnmask(USHORT maskval,HCARD handleval);

C11W32API INT __stdcall C11_MONConfig(ULONG configflags,USHORT moncount,HCARD handleval);

C11W32API INT __stdcall C11_MONCount(HCARD handleval);

C11W32API USHORT __stdcall C11_MONRd(USHORT index,LPUSHORT blockinfo,LPUSHORT datawords,HCARD handleval);

C11W32API VOID __stdcall C11_MONTermAddr(USHORT termaddr,INT enableflag,HCARD handleval);

C11W32API HCARD __stdcall C11_OpenCard(INT card_number);

C11W32API USHORT __stdcall C11_PackCWD(INT TAval,INT TRval,INT SAval,INT WCval);

C11W32API USHORT __stdcall C11_PeekMem(USHORT WordOffset,HCARD handleval);

C11W32API VOID __stdcall C11_PokeMem(USHORT Data,USHORT WordOffset,HCARD handleval);

C11W32API USHORT __stdcall C11_PutBitFld(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

C11W32API USHORT __stdcall C11_RdPort(USHORT Register,HCARD handleval);

C11W32API VOID __stdcall C11_Reset(HCARD handleval);

C11W32API VOID __stdcall C11_Restart(HCARD handleval);

C11W32API USHORT __stdcall C11_RTAccessed(USHORT cwd,HCARD handleval);

C11W32API INT __stdcall C11_RTConfig(ULONG configflags,USHORT rtaddr,HCARD handleval);

C11W32API INT __stdcall C11_RTCountList(USHORT cwd,HCARD handleval);

C11W32API VOID __stdcall C11_RTIllegal(USHORT cwd,HCARD handleval);

C11W32API USHORT __stdcall C11_RTInitList(USHORT cwd,INT count,HCARD handleval);

C11W32API INT __stdcall C11_RTInt(USHORT cwd,USHORT value,HCARD handleval);

C11W32API INT __stdcall C11_RTMONConfig(ULONG configflags,USHORT rtaddr,USHORT moncount,HCARD handleval);

C11W32API USHORT __stdcall C11_RTRdData(USHORT cwd,LPUSHORT data,HCARD handleval);

C11W32API USHORT __stdcall C11_RTRdDataEx(USHORT cwd,LPUSHORT infodata,HCARD handleval);

C11W32API USHORT __stdcall C11_RTRdList(USHORT cwd,USHORT index,LPUSHORT infodata,HCARD handleval);

C11W32API USHORT __stdcall C11_RTRstList(USHORT cwd,HCARD handleval);

C11W32API USHORT __stdcall C11_RTWrData(USHORT cwd,LPUSHORT data,HCARD handleval);

C11W32API VOID __stdcall C11_RTWrSWD(USHORT statusflags,HCARD handleval);

C11W32API USHORT __stdcall C11_SelfTest(HCARD handleval);

C11W32API BOOL __stdcall C11_Start(HCARD handleval);

C11W32API BOOL __stdcall C11_Stop(HCARD handleval);

C11W32API INT __stdcall C11_TransmitMsg(BOOL busab,USHORT cwd,LPUSHORT dataptr,LPUSHORT swd,HCARD handleval);

C11W32API INT __stdcall C11_TransmitRTRT(BOOL busab,USHORT cwd1,USHORT cwd2,LPUSHORT dataptr,LPUSHORT swd1,LPUSHORT swd2,HCARD handleval);

C11W32API VOID __stdcall C11_UnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRval,LPINT SAval,LPINT WCval);

C11W32API VOID __stdcall C11_WrPort(USHORT Data,USHORT Register,HCARD handleval);


/**
*
*  Internal functions used by the CM1553-1 Driver.
*
**/

C11W32API USHORT __stdcall C11_BCAddrData(INT index,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockAddr(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCBlockClear(HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockCount(HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockCtrl(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCBlockInit(LPUSHORT block,USHORT opcode);

C11W32API INT __stdcall C11_BCBlockInsert(LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockRead(INT index,LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCBlockWrite(INT index,LPUSHORT block,HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleAddr(INT index,HCARD handleval);

C11W32API VOID __stdcall C11_BCCycleClear(HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleInsert(LPUSHORT cycle,HCARD handleval);

C11W32API VOID __stdcall C11_BCCycleRestart(HCARD handleval);

C11W32API USHORT __stdcall C11_BCCycleWrite(INT index,LPUSHORT cycle,HCARD handleval);

C11W32API VOID __stdcall C11_ClrAllILLEGAL(HCARD handleval);

C11W32API VOID __stdcall C11_ClrILLEGAL(INT subaddr,BOOL trbit,BOOL mcflag,BOOL bcastflag,HCARD handleval);

C11W32API ULONG __stdcall C11_Div(ULONG diva,ULONG divb);

C11W32API VOID __stdcall C11_FillMem(USHORT Data,USHORT WordOffset,INT iWordCount,HCARD handleval);

C11W32API USHORT __stdcall C11_GetBCAST(HCARD handleval);