documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32VB.BAS


Public Declare Function C11_BCBranchEnd Lib "C11W32.DLL" Alias "_C11_BCBranchEnd@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCCallFrame Lib "C11W32.DLL" Alias "_C11_BCCallFrame@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCCheckMsg Lib "C11W32.DLL" Alias "_C11_BCCheckMsg@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCConfig Lib "C11W32.DLL" Alias "_C11_BCConfig@8" (ByVal configflags As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCConfigEx Lib "C11W32.DLL" Alias "_C11_BCConfigEx@16" (ByVal configflags As Long, ByVal cmdcountval As Long, ByVal cyccountval As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoAgain Lib "C11W32.DLL" Alias "_C11_BCDoAgain@8" (ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoGap Lib "C11W32.DLL" Alias "_C11_BCDoGap@8" (ByVal gapval As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoGoto Lib "C11W32.DLL" Alias "_C11_BCDoGoto@8" (ByVal destindex As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoHalt Lib "C11W32.DLL" Alias "_C11_BCDoHalt@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCDoInt Lib "C11W32.DLL" Alias "_C11_BCDoInt@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCDoMsg Lib "C11W32.DLL" Alias "_C11_BCDoMsg@16" (ByVal busab As Long, ByVal cwdval As Integer, ByRef datavals As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoResv Lib "C11W32.DLL" Alias "_C11_BCDoResv@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCDoRTRT Lib "C11W32.DLL" Alias "_C11_BCDoRTRT@16" (ByVal busab As Long, ByVal cwd1val As Integer, ByVal cwd2val As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_BCDoSelfTest Lib "C11W32.DLL" Alias "_C11_BCDoSelfTest@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCFrameEnd Lib "C11W32.DLL" Alias "_C11_BCFrameEnd@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCFrameStart Lib "C11W32.DLL" Alias "_C11_BCFrameStart@8" (ByVal timeval As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCMsgBranch Lib "C11W32.DLL" Alias "_C11_BCMsgBranch@16" (ByVal index As Long, ByVal destindex As Long, ByVal condition As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCMsgRetry Lib "C11W32.DLL" Alias "_C11_BCMsgRetry@16" (ByVal index As Long, ByVal retries As Long, ByVal condition As Long, ByVal handleval As Long) As Long
Public Declare Function C11_BCRdData Lib "C11W32.DLL" Alias "_C11_BCRdData@16" (ByVal index As Long, ByRef data As Integer, ByVal count As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_BCRdSWD1 Lib "C11W32.DLL" Alias "_C11_BCRdSWD1@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCRdSWD2 Lib "C11W32.DLL" Alias "_C11_BCRdSWD2@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCWrData Lib "C11W32.DLL" Alias "_C11_BCWrData@16" (ByVal index As Long, ByRef data As Integer, ByVal count As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_CloseCard Lib "C11W32.DLL" Alias "_C11_CloseCard@4" (ByVal handleval As Long) As Long
Public Declare Function C11_GetBitFld Lib "C11W32.DLL" Alias "_C11_GetBitFld@12" (ByVal oldvalue As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function C11_INTInstall Lib "C11W32.DLL" Alias "_C11_INTInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C11_INTRd Lib "C11W32.DLL" Alias "_C11_INTRd@16" (ByVal index As Long, ByRef typeval As Integer, ByRef eventval As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_INTUninstall Lib "C11W32.DLL" Alias "_C11_INTUninstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function C11_INTUnmask Lib "C11W32.DLL" Alias "_C11_INTUnmask@8" (ByVal maskval As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_MONConfig Lib "C11W32.DLL" Alias "_C11_MONConfig@12" (ByVal configflags As Long, ByVal moncount As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_MONCount Lib "C11W32.DLL" Alias "_C11_MONCount@4" (ByVal handleval As Long) As Long
Public Declare Function C11_MONRd Lib "C11W32.DLL" Alias "_C11_MONRd@16" (ByVal index As Integer, ByRef blockinfo As Integer, ByRef datawords As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_MONTermAddr Lib "C11W32.DLL" Alias "_C11_MONTermAddr@12" (ByVal termaddr As Integer, ByVal enableflag As Long, ByVal handleval As Long) As Long
Public Declare Function C11_OpenCard Lib "C11W32.DLL" Alias "_C11_OpenCard@4" (ByVal card_number As Long) As Long
Public Declare Function C11_PackCWD Lib "C11W32.DLL" Alias "_C11_PackCWD@16" (ByVal taval As Long, ByVal trval As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Function C11_PeekMem Lib "C11W32.DLL" Alias "_C11_PeekMem@8" (ByVal wordoffset As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_PokeMem Lib "C11W32.DLL" Alias "_C11_PokeMem@12" (ByVal data As Integer, ByVal wordoffset As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_PutBitFld Lib "C11W32.DLL" Alias "_C11_PutBitFld@16" (ByVal oldvalue As Integer, ByVal newfld As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function C11_RdPort Lib "C11W32.DLL" Alias "_C11_RdPort@8" (ByVal register As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_Reset Lib "C11W32.DLL" Alias "_C11_Reset@4" (ByVal handleval As Long) As Long
Public Declare Function C11_Restart Lib "C11W32.DLL" Alias "_C11_Restart@4" (ByVal handleval As Long) As Long
Public Declare Function C11_RTAccessed Lib "C11W32.DLL" Alias "_C11_RTAccessed@8" (ByVal cwd As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTConfig Lib "C11W32.DLL" Alias "_C11_RTConfig@12" (ByVal configflags As Long, ByVal rtaddr As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_RTCountList Lib "C11W32.DLL" Alias "_C11_RTCountList@8" (ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_RTIllegal Lib "C11W32.DLL" Alias "_C11_RTIllegal@8" (ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_RTInitList Lib "C11W32.DLL" Alias "_C11_RTInitList@12" (ByVal cwd As Integer, ByVal count As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_RTInt Lib "C11W32.DLL" Alias "_C11_RTInt@12" (ByVal cwd As Integer, ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_RTMONConfig Lib "C11W32.DLL" Alias "_C11_RTMONConfig@16" (ByVal configflags As Long, ByVal rtaddr As Integer, ByVal moncount As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_RTRdData Lib "C11W32.DLL" Alias "_C11_RTRdData@12" (ByVal cwd As Integer, ByRef data As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTRdDataEx Lib "C11W32.DLL" Alias "_C11_RTRdDataEx@12" (ByVal cwd As Integer, ByRef infodata As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTRdList Lib "C11W32.DLL" Alias "_C11_RTRdList@16" (ByVal cwd As Integer, ByVal index As Integer, ByRef infodata As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTRstList Lib "C11W32.DLL" Alias "_C11_RTRstList@8" (ByVal cwd As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTWrData Lib "C11W32.DLL" Alias "_C11_RTWrData@12" (ByVal cwd As Integer, ByRef data As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_RTWrSWD Lib "C11W32.DLL" Alias "_C11_RTWrSWD@8" (ByVal statusflags As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_SelfTest Lib "C11W32.DLL" Alias "_C11_SelfTest@4" (ByVal handleval As Long) As Integer
Public Declare Function C11_Start Lib "C11W32.DLL" Alias "_C11_Start@4" (ByVal handleval As Long) As Long
Public Declare Function C11_Stop Lib "C11W32.DLL" Alias "_C11_Stop@4" (ByVal handleval As Long) As Long
Public Declare Function C11_TransmitMsg Lib "C11W32.DLL" Alias "_C11_TransmitMsg@20" (ByVal busab As Long, ByVal cwd As Integer, ByRef dataptr As Integer, ByRef swd As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_TransmitRTRT Lib "C11W32.DLL" Alias "_C11_TransmitRTRT@28" (ByVal busab As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef dataptr As Integer, ByRef swd1 As Integer, ByRef swd2 As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_UnpackCWD Lib "C11W32.DLL" Alias "_C11_UnpackCWD@20" (ByVal cwdval As Integer, ByRef taval As Long, ByRef trval As Long, ByRef saval As Long, ByRef wcval As Long) As Long
Public Declare Function C11_WrPort Lib "C11W32.DLL" Alias "_C11_WrPort@12" (ByVal data As Integer, ByVal register As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_BCAddrData Lib "C11W32.DLL" Alias "_C11_BCAddrData@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCBlockAddr Lib "C11W32.DLL" Alias "_C11_BCBlockAddr@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCBlockClear Lib "C11W32.DLL" Alias "_C11_BCBlockClear@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCBlockCount Lib "C11W32.DLL" Alias "_C11_BCBlockCount@4" (ByVal handleval As Long) As Integer
Public Declare Function C11_BCBlockCtrl Lib "C11W32.DLL" Alias "_C11_BCBlockCtrl@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCBlockInit Lib "C11W32.DLL" Alias "_C11_BCBlockInit@8" (ByRef block As Integer, ByVal opcode As Integer) As Long
Public Declare Function C11_BCBlockInsert Lib "C11W32.DLL" Alias "_C11_BCBlockInsert@8" (ByRef block As Integer, ByVal handleval As Long) As Long
Public Declare Function C11_BCBlockRead Lib "C11W32.DLL" Alias "_C11_BCBlockRead@12" (ByVal index As Long, ByRef block As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_BCBlockWrite Lib "C11W32.DLL" Alias "_C11_BCBlockWrite@12" (ByVal index As Long, ByRef block As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_BCCycleAddr Lib "C11W32.DLL" Alias "_C11_BCCycleAddr@8" (ByVal index As Long, ByVal handleval As Long) As Integer
Public Declare Function C11_BCCycleClear Lib "C11W32.DLL" Alias "_C11_BCCycleClear@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCCycleInsert Lib "C11W32.DLL" Alias "_C11_BCCycleInsert@8" (ByRef cycle As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_BCCycleRestart Lib "C11W32.DLL" Alias "_C11_BCCycleRestart@4" (ByVal handleval As Long) As Long
Public Declare Function C11_BCCycleWrite Lib "C11W32.DLL" Alias "_C11_BCCycleWrite@12" (ByVal index As Long, ByRef cycle As Integer, ByVal handleval As Long) As Integer
Public Declare Function C11_ClrAllILLEGAL Lib "C11W32.DLL" Alias "_C11_ClrAllILLEGAL@4" (ByVal handleval As Long) As Long
Public Declare Function C11_ClrILLEGAL Lib "C11W32.DLL" Alias "_C11_ClrILLEGAL@20" (ByVal subaddr As Long, ByVal trbit As Long, ByVal mcflag As Long, ByVal bcastflag As Long, ByVal handleval As Long) As Long
Public Declare Function C11_Div Lib "C11W32.DLL" Alias "_C11_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function C11_FillMem Lib "C11W32.DLL" Alias "_C11_FillMem@16" (ByVal data As Integer, ByVal wordoffset As Integer, ByVal iwordcount As Long, ByVal handleval As Long) As Long
Public Declare Function C11_GetBCAST Lib "C11W32.DLL" Alias "_C11_GetBCAST@4" (ByVal handleval As Long) As Integer
